src/App.css
/***********************************************************
  General
***********************************************************/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  min-height: 100vh;
}

/***********************************************************
  Light Mode
***********************************************************/
.body {
  background-color: #F5F5F5;
  color: #333;
}

.header-body,
.info-body,
.interests-body {
  background-color: #EEEEEE;
}

/***********************************************************
  Common Styles
***********************************************************/
.img-responsive {
  max-width: 100%;
}

.profilePic {
  border-radius: .5rem .5rem 0 0;
  margin-bottom: -0.25rem;
}

.header-body {
  padding-block: 1rem;
}

.header-body > * {
  margin-block: 0.25rem;
}

.footer-body {
  background-color: #E0E0E0;
  border-radius: 0 0 .5rem .5rem;
}

.personal-title {
  color: #4a86d4;
}

.info-btns {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.social-icon {
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 0.5rem;
  color: #56535f;
  transition: all 0.2s ease-in-out;
}

.social-icon:hover {
  color: #373540;
}

.info-btn {
  border: none;
  border-radius: 0.25rem;
  font-size: 0.75rem;
  font-weight: 600;
  cursor: pointer;
  text-decoration: none;
  padding: .4rem .8rem;
  transition: all 0.2s ease-in-out;
}

.info-btn > i {
  padding-right: .5rem;
}

.btn-email {
  color: #555;
  background-color: #eee;
  border: 1px solid #555;
}

.btn-email:link,
.btn-email:visited {
  color: #333;
}

.btn-email:focus {
  border: 1px dotted #eee;
}

.btn-email:hover {
  color: #fafafa;
  background-color: #555;
  border: 1px solid #555;
}

.btn-email:active {
  box-shadow: 1px 1px 4px #555;
}

.btn-linkedin,
.btn-linkedin:link {
  color: #5093e2;
  background-color: #eee;
  border: 1px solid #5093e2;
}

.btn-linkedin:visited {
}

.btn-linkedin:focus {
}

.btn-linkedin:hover {
  color: #eee;
  background-color: #5093e2;
}

.btn-linkedin:active {
  box-shadow: 1px 1px 4px #555;
}

.btn-whatsapp {
  font-size: 1.4rem;
  color: #00E676;
}

.btn-whatsapp:link,
.btn-whatsapp:visited {
}

.btn-whatsapp:focus {
}

.btn-whatsapp:hover {
  color: #e1fbe8;
  text-shadow: 1px 1px 4px #00c32b, 1px 1px 4px #555;
}

.btn-whatsapp:active {
  text-shadow: 1px 1px 4px #555;
}

.link-website {
  color: #eee;
}

.insterest-items {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: start;
  align-items: center;
}

.insterest-items > li::after{
  content: '.';
  margin-right: .4rem;
}

/*******************************************************************************************************
 * Lang and Theme Buttons
*******************************************************************************************************/

.header-nav {
  position: relative;
}

.lang,
.theme {
  margin: .5rem;
}

.lang {
  position: absolute;
  top: 0;
  right: 0;
}

.lang-main-btn {
  cursor: pointer;
}

.lang-btn {
  border: 1px solid rgba(255, 255, 255, .9);
  border-radius: .25rem;
  background-color: var(--color-primary-500);
  color: var(--color-primary-050);
  padding: .25rem;
  cursor: pointer;
  transition: all .25s ease-in-out;
}

.lang-btn-active {
  background-color: #1A1B21;
}

.bi-translate {
  color: #1A1B21;
}

.lang:hover > .lang-group {
  display: visible;
}

.theme {
  position: absolute;
  top: 0;
  left: 0;
  padding-top: 1rem;
}

.theme-btn {
  font-size: .75rem;
  padding: .25rem;
  margin: .25rem;
  border: 1px solid rgba(255, 255, 255, .9);
  color: var(--color-primary-800);
  text-shadow: 0px 0px 3px rgba(255, 255, 255, .9);
  cursor: pointer;
  border-radius: .25rem;
  transition: all .25s ease-in-out;
}

.theme-btn-active {
  background-color: var(--color-primary-800);
  color: #fff;
}

.theme-btn:hover,
.lang-btn:hover {
  box-shadow: 0px 0px 2px 1px rgba(255, 255, 255, .6);
}

/***********************************************************
  Dark Mode
***********************************************************/

.dark-theme {
  background-color: #23252C;
  color: #eee;
}

.dark-theme .header-body,
.dark-theme .info-body,
.dark-theme .interests-body {
  background-color: #1a1b21;
}

.dark-theme .footer-body {
  background-color: #161619;
  border-radius: 0 0 .5rem .5rem;
}

.dark-theme .personal-title {
  color: #f3bf99;
}

.dark-theme .social-icon {
  color: #918E9B;
}

.dark-theme .social-icon:hover {
  color: #eee;
}

.dark-theme .btn-email {
  color: #333;
  background-color: #eee;
  border: 1px solid #eee;
}

.dark-theme .btn-email:link,
.dark-theme .btn-email:visited {
  color: #333;
}

.dark-theme .btn-email:focus {
  border: 1px dotted #eee;
}

.dark-theme .btn-email:hover {
  color: #eee;
  background-color: #444;
  border: 1px solid #aaa;
}

.dark-theme .btn-email:active {
  box-shadow: 1px 1px 4px #fff;
}

.dark-theme .btn-linkedin {
  color: var(--color-primary-050);
  background-color: #5093e2;
  border: 1px solid #5093e2;
}

.dark-theme .btn-linkedin:link,
.dark-theme .btn-linkedin:visited {
}

.dark-theme .btn-linkedin:focus {
}

.dark-theme .btn-linkedin:hover {
  color: #5093e2;
  background-color: #eee;
}

.dark-theme .btn-linkedin:active {
  box-shadow: 1px 1px 4px #fff;
}

.dark-theme .btn-whatsapp {
  font-size: 1.4rem;
  color: #00E676;
}

.dark-theme .btn-whatsapp:link,
.dark-theme .btn-whatsapp:visited {
}

.dark-theme .btn-whatsapp:focus {
}

.dark-theme .btn-whatsapp:hover {
  color: #eee;
  text-shadow: 1px 1px 4px #00e676;
}

.dark-theme .btn-whatsapp:active {
  text-shadow: 1px 1px 4px #eee;
  color: #00e676;
}

